# cpp-py-analyser

./: CMakeLists.txt  README.md  conanfile.py  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
include/: analyse.hpp  cmd_options.hpp  file.hpp  function.hpp  metric.hpp  metric_accumulator.hpp  utils.hpp
include/metric_accumulator_impl/: average_accumulator.hpp  categorical_accumulator.hpp  sum_average_accumulator.hpp
include/metric_impl/: code_lines_count.hpp  cyclomatic_complexity.hpp  naming_style.hpp  parameters_count.hpp
src/: CMakeLists.txt  cmd_options.cpp  file.cpp  function.cpp  metric.cpp  metric_accumulator.cpp
src/metric_accumulator_impl/: average_accumulator.cpp  categorical_accumulator.cpp  sum_average_accumulator.cpp
src/metric_accumulator_impl/tests/: average_accumulator.cpp  categorical_accumulator.cpp  sum_average_accumulator.cpp
src/metric_impl/: code_lines_count.cpp  cyclomatic_complexity.cpp  naming_style.cpp  parameters_count.cpp
src/metric_impl/tests/: code_lines_count.cpp  cyclomatic_complexity.cpp  naming_style.cpp  parameters_count.cpp
src/metric_impl/tests/files/: classes.py  many_functions.py  nested_if.py
